2008-08-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.h:
	* src/backend/bacon-video-widget-gst-missing-plugins.c
	(bacon_video_widget_gst_missing_plugins_blacklist):
	There's some plugins we just don't want to use, like
	the gst-ffmpeg FLV demuxer (doesn't seek), so blacklist it
	(code from Tim-Philipp Müller <tim.muller at collabora co uk>)

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_init): Call the function above to
	blacklist the ffmpeg FLV demuxer

	* src/plugins/youtube/youtube.py: No need to check for
	the FLV demuxer by hand, we killed the crappy one already,
	launches the plugin install helper when it's missing

	(Closes: #534419)

2008-08-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Allow passing an
	offset for the backward/forward seeking, through the url
	parameter

	* src/plugins/lirc/totem-lirc.c (totem_lirc_get_url),
	(totem_lirc_to_command), (totem_lirc_read_code):
	Parse seek_backward and seek_forward and allow users
	to append a seek offset, meaning you can configure different
	keys for different seeking lengths

	* src/plugins/lirc/totem_lirc_default: document the above

	(Closes: #470672)

2008-08-21  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c (totem_lirc_to_command):
	* src/plugins/lirc/totem_lirc_default:
	* src/totem.c (totem_action_remote):
	* src/totem.h: Add support for the stop remote control key,
	will stop the playback and go back to the beginning of the playlist
	(as the stop button on a CD player would do)

	* src/backend/bacon-video-widget-gst-0.10.c (got_time_tick),
	(bacon_video_widget_stop): Don't print out warnings when trying to
	stop a stream but nothing is opened

	See http://bugzilla.gnome.org/show_bug.cgi?id=470672#c3

2008-08-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Yay for GCC warnings,